--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,7 @@ nav:
     - Canvas: setup/canvas.md
   - Simulations:
     - Introduction: sims/index.md
+    - String Harmonics: sims/string-harmonics.md
   - References: references.md
   - Glossary: glossary.md
   - Contact: contact.md
