--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,8 @@ nav:
   - About: about.md
   - Getting Started:
     - Introduction: setup/index.md
+    - Sound test: setup/03-sound-test.md
+    - Structure: setup/04-structure.md
     - Canvas: setup/canvas.md
   - Simulations:
     - Introduction: sims/index.md
