--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,9 @@ nav:
     - Canvas: setup/canvas.md
   - Simulations:
     - Introduction: sims/index.md
+    - Bouncing Ball: sims/bouncing-ball
+    - Recursive Tree: sims/recursive-tree
+    - Sine Wave: sims/sine-wave
     - String Harmonics: sims/string-harmonics.md
   - References: references.md
   - Glossary: glossary.md
