--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -16,7 +16,7 @@ nav:
   - Simulations:
     - Introduction: sims/index.md
     - Bouncing Ball: sims/bouncing-ball
-    - Recursive Tree: sims/recursive-tree
+    - Recursive Tree: sims/recursive-tree/
     - Sine Wave: sims/sine-wave
     - String Harmonics: sims/string-harmonics.md
   - References: references.md
