--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,15 +10,17 @@ nav:
   - About: about.md
   - Getting Started:
     - Introduction: setup/index.md
+    - Setup: setup/01-processing.md
+    - System Prompt: setup/02-system-prompt.md
     - Sound test: setup/03-sound-test.md
     - Structure: setup/04-structure.md
     - Canvas: setup/canvas.md
   - Simulations:
     - Introduction: sims/index.md
-    - Bouncing Ball: sims/bouncing-ball
-    - Recursive Tree: sims/recursive-tree/
-    - Sine Wave: sims/sine-wave
-    - String Harmonics: sims/string-harmonics.md
+    - Bouncing Ball: sims/bouncing-ball/index.md
+    - Recursive Tree: sims/recursive-tree/index.md
+    - Sine Wave: sims/sine-wave/index.md
+    - String Harmonics: sims/string-harmonics/index.md
   - References: references.md
   - Glossary: glossary.md
   - Contact: contact.md
