--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,6 +21,9 @@ nav:
     - Recursive Tree: sims/recursive-tree/index.md
     - Sine Wave: sims/sine-wave/index.md
     - String Harmonics: sims/string-harmonics/index.md
+    - Circuits: sims/circuits/index.md
+    - H-Bridge: sims/h-bridge/index.md
+    - Foxes and Rabbits: sims/foxes-and-rabbits/index.md
   - References: references.md
   - Glossary: glossary.md
   - Contact: contact.md
