--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,7 @@ nav:
     - Sound test: setup/03-sound-test.md
     - Structure: setup/04-structure.md
     - Canvas: setup/canvas.md
+    - P5 Reference Manual: setup/p5-reference-manual.md
   - Simulations:
     - Introduction: sims/index.md
     - Bouncing Ball: sims/bouncing-ball/index.md
@@ -24,6 +25,24 @@ nav:
     - Circuits: sims/circuits/index.md
     - H-Bridge: sims/h-bridge/index.md
     - Foxes and Rabbits: sims/foxes-and-rabbits/index.md
+    - sims/alu/index.md
+    - sims/analog-clock/index.md
+    - sims/bouncing-ball/01-bounce.md
+    - sims/bouncing-ball/brownian-motion.md
+    - sims/circle/circle.md
+    - sims/circuits/circuit.md
+    - sims/circuits/circuits-v2.md
+    - sims/conway/index.md
+    - sims/foxes-and-rabbits/rabbits-and-foxs.md
+    - sims/least-squares/index.md
+    - sims/logic-gates/index.md
+    - sims/motor/index.md
+    - sims/neural-network/index.md
+    - sims/polygon/index.md
+    - sims/pwm/index.md
+    - sims/recursion-tree/index.md
+    - sims/seven-segment-display/index.md
+    - sims/string-harmonics/string-harmonics.md
   - References: references.md
   - Glossary: glossary.md
   - Contact: contact.md
