--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,8 @@ nav:
     - sims/recursion-tree/index.md
     - sims/seven-segment-display/index.md
     - sims/string-harmonics/string-harmonics.md
+    - sims/supply-and-demand/index.md
+    - sims/wave-sums/index.md
   - References: references.md
   - Glossary: glossary.md
   - Contact: contact.md
