--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,26 +19,23 @@ nav:
   - Simulations:
     - Introduction: sims/index.md
     - Bouncing Ball: sims/bouncing-ball/index.md
-    - Recursive Tree: sims/recursive-tree/index.md
+    - Polygon: sims/polygon/index.md
+    - Recursion Tree: sims/recursion-tree/index.md
     - Sine Wave: sims/sine-wave/index.md
     - String Harmonics: sims/string-harmonics/index.md
     - Circuits: sims/circuits/index.md
     - H-Bridge: sims/h-bridge/index.md
     - Foxes and Rabbits: sims/foxes-and-rabbits/index.md
-    - sims/alu/index.md
-    - sims/analog-clock/index.md
-    - sims/bouncing-ball/01-bounce.md
-    - sims/bouncing-ball/brownian-motion.md
-    - sims/circle/circle.md
-    - sims/circuits/circuit.md
-    - sims/circuits/circuits-v2.md
-    - sims/conway/index.md
-    - sims/foxes-and-rabbits/rabbits-and-foxs.md
-    - sims/least-squares/index.md
-    - sims/logic-gates/index.md
-    - sims/motor/index.md
-    - sims/neural-network/index.md
-    - sims/polygon/index.md
+    - ALU: sims/alu/index.md
+    - Analog Clock: sims/analog-clock/index.md
+    - Browian Motion: sims/bouncing-ball/brownian-motion.md
+    - Circle: sims/circle/circle.md
+    - Circuits: sims/circuits/circuit.md
+    - Conway's Game of Life: sims/conway/index.md
+    - Least Squares: sims/least-squares/index.md
+    - Logic Gates: sims/logic-gates/index.md
+    - Motor: sims/motor/index.md
+    - Neural Network: sims/neural-network/index.md
     - sims/pwm/index.md
     - sims/recursion-tree/index.md
     - sims/seven-segment-display/index.md
