--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,12 +36,12 @@ nav:
     - Logic Gates: sims/logic-gates/index.md
     - Motor: sims/motor/index.md
     - Neural Network: sims/neural-network/index.md
-    - sims/pwm/index.md
-    - sims/recursion-tree/index.md
-    - sims/seven-segment-display/index.md
-    - sims/string-harmonics/string-harmonics.md
-    - sims/supply-and-demand/index.md
-    - sims/wave-sums/index.md
+    - Pulse Width Modulation: sims/pwm/index.md
+    - Recursion Tree: sims/recursion-tree/index.md
+    - 7 Segment Display: sims/seven-segment-display/index.md
+    - String Harmonics: sims/string-harmonics/string-harmonics.md
+    - Supply and Demand: sims/supply-and-demand/index.md
+    - Wave Sum: sims/wave-sums/index.md
   - References: references.md
   - Glossary: glossary.md
   - Contact: contact.md
