--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,7 +14,7 @@ nav:
     - System Prompt: setup/02-system-prompt.md
     - Sound test: setup/03-sound-test.md
     - Structure: setup/04-structure.md
-    - Canvas: setup/canvas.md
+    - YAML File: setup/05-yaml-file.md
     - P5 Reference Manual: setup/p5-reference-manual.md
   - Simulations:
     - Introduction: sims/index.md
