--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,6 +42,7 @@ nav:
     - String Harmonics: sims/string-harmonics/string-harmonics.md
     - Supply and Demand: sims/supply-and-demand/index.md
     - Wave Sum: sims/wave-sums/index.md
+    - Breath First Search: sims/bfs/index.md
   - References: references.md
   - Glossary: glossary.md
   - Contact: contact.md
