--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,6 +33,7 @@ nav:
     - Circuits: sims/circuits/circuit.md
     - Conway's Game of Life: sims/conway/index.md
     - Least Squares: sims/least-squares/index.md
+    - Binary Number: sims/binary-number/index.md
     - Logic Gates: sims/logic-gates/index.md
     - Motor: sims/motor/index.md
     - Neural Network: sims/neural-network/index.md
