--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,9 +28,8 @@ nav:
     - Foxes and Rabbits: sims/foxes-and-rabbits/index.md
     - ALU: sims/alu/index.md
     - Analog Clock: sims/analog-clock/index.md
-    - Browian Motion: sims/bouncing-ball/brownian-motion.md
+    - Brownian Motion: sims/bouncing-ball/brownian-motion.md
     - Circle: sims/circle/circle.md
-    - Circuits: sims/circuits/circuit.md
     - Conway's Game of Life: sims/conway/index.md
     - Least Squares: sims/least-squares/index.md
     - Binary Number: sims/binary-number/index.md
@@ -49,7 +48,7 @@ nav:
   - Glossary: glossary.md
   - Contact: contact.md
 
-# CoderDojo Microsite Standards from here down
+# Dan's MicroSite Standards from here down
 edit_uri: 'blob/master/docs'
 theme:
   name: material
@@ -78,4 +77,4 @@ extra:
   analytics:
     provider: google
     # https://analytics.google.com/analytics/web/#/a1420179p349994530/admin/streams/table/4433129821
-    # property: G-EKTEBLZ2KP
+    property: G-QHFRQSM61F
