--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,7 +39,7 @@ nav:
     - Pulse Width Modulation: sims/pwm/index.md
     - Recursion Tree: sims/recursion-tree/index.md
     - 7 Segment Display: sims/seven-segment-display/index.md
-    - String Harmonics: sims/string-harmonics/string-harmonics.md
+    - String Harmonics: sims/string-harmonics/index.md
     - Supply and Demand: sims/supply-and-demand/index.md
     - Wave Sum: sims/wave-sums/index.md
     - Breath First Search: sims/bfs/index.md
@@ -77,4 +77,4 @@ extra:
   analytics:
     provider: google
     # https://analytics.google.com/analytics/web/#/a1420179p349994530/admin/streams/table/4433129821
-    property: G-QHFRQSM61F
+    property: G-BBR7MPK96Z
