--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,7 @@ nav:
     - Wave Sum: sims/wave-sums/index.md
     - Breath First Search: sims/bfs/index.md
     - Force Directed Graph: sims/force-directed-graph/index.md
+    - Sphere: sims/sphere/index.md
   - References: references.md
   - Glossary: glossary.md
   - Contact: contact.md
