--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,7 +25,7 @@ nav:
     - String Harmonics: sims/string-harmonics/index.md
     - Circuits: sims/circuits/index.md
     - H-Bridge: sims/h-bridge/index.md
-    - Foxes and Rabbits: sims/foxes-and-rabbits/index.md
+    - Rabbits and Foxes: sims/rabbits-and-foxes/index.md
     - ALU: sims/alu/index.md
     - Analog Clock: sims/analog-clock/index.md
     - Brownian Motion: sims/bouncing-ball/brownian-motion.md
@@ -71,6 +71,7 @@ markdown_extensions:
   - pymdownx.details
   - pymdownx.superfences
   - attr_list
+  - md_in_html
   - pymdownx.highlight:
       linenums: true
 extra:
