--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,7 @@ nav:
   - Simulations:
     - Introduction: sims/index.md
     - Bouncing Ball: sims/bouncing-ball/index.md
+    - Gold Star: sims/gold-star/index.md
     - Polygon: sims/polygon/index.md
     - Recursion Tree: sims/recursion-tree/index.md
     - Sine Wave: sims/sine-wave/index.md
