--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,6 +53,8 @@ nav:
 edit_uri: 'blob/master/docs'
 theme:
   name: material
+  logo: img/logo.png
+  favicon: img/favicon.png
   include_sidebar: true
   features:
     - content.code.copy
