--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,7 +54,7 @@ edit_uri: 'blob/master/docs'
 theme:
   name: material
   logo: img/logo.png
-  favicon: img/favicon.png
+  favicon: img/favicon.ico
   include_sidebar: true
   features:
     - content.code.copy
