--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,6 +47,7 @@ nav:
     - Sphere: sims/sphere/index.md
   - References: references.md
   - Glossary: glossary.md
+  - How We Built This Site: how-we-built-this-site.md
   - Contact: contact.md
 
 # Dan's MicroSite Standards from here down
@@ -68,7 +69,7 @@ theme:
     - navigation.footer
 plugins:
   - search
-#  - social
+  - social
 markdown_extensions:
   - admonition
   - pymdownx.details
