--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,7 +42,7 @@ nav:
     - 7 Segment Display: sims/seven-segment-display/index.md
     - Supply and Demand: sims/supply-and-demand/index.md
     - Wave Sum: sims/wave-sums/index.md
-    - Breath First Search: sims/bfs/index.md
+    - Breadth First Search: sims/bfs/index.md
     - Force Directed Graph: sims/force-directed-graph/index.md
     - Sphere: sims/sphere/index.md
   - References: references.md
