--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,6 +48,7 @@ nav:
   - References: references.md
   - Glossary: glossary.md
   - How We Built This Site: how-we-built-this-site.md
+  - Creative Commons License: license.md
   - Contact: contact.md
 
 # Dan's MicroSite Standards from here down
