--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,7 @@ nav:
     - Introduction: setup/index.md
     - Setup: setup/01-processing.md
     - System Prompt: setup/02-system-prompt.md
+    - User Experience Tips: setup/07-ux-tips.md
     - Sound test: setup/03-sound-test.md
     - Structure: setup/04-structure.md
     - YAML File: setup/05-yaml-file.md
