--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,7 +45,8 @@ nav:
     - Wave Sum: sims/wave-sums/index.md
     - Breadth First Search: sims/bfs/index.md
     - Force Directed Graph: sims/force-directed-graph/index.md
-    - Sphere: sims/sphere/index.md
+    - 3D Sphere: sims/sphere/index.md
+    - Sierpinski: sims/sierpinski/index.md
   - References: references.md
   - Glossary: glossary.md
   - How We Built This Site: how-we-built-this-site.md
