--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ nav:
     - Polygon: sims/polygon/index.md
     - Recursion Tree: sims/recursion-tree/index.md
     - Sine Wave: sims/sine-wave/index.md
+    - Canon: sims/canon/index.md
     - String Harmonics: sims/string-harmonics/index.md
     - Circuits: sims/circuits/index.md
     - H-Bridge: sims/h-bridge/index.md
