--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,6 +48,7 @@ nav:
     - Force Directed Graph: sims/force-directed-graph/index.md
     - 3D Sphere: sims/sphere/index.md
     - Sierpinski: sims/sierpinski/index.md
+    - Collision Avoidance Robot: sims/collision-avoidance-robot/index.md
   - References: references.md
   - Glossary: glossary.md
   - How We Built This Site: how-we-built-this-site.md
