--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,6 +49,7 @@ nav:
     - 3D Sphere: sims/sphere/index.md
     - Sierpinski: sims/sierpinski/index.md
     - Collision Avoidance Robot: sims/collision-avoidance-robot/index.md
+    - Robots: sims/robots/index.md
   - References: references.md
   - Glossary: glossary.md
   - How We Built This Site: how-we-built-this-site.md
