--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,6 +50,7 @@ nav:
     - Sierpinski: sims/sierpinski/index.md
     - Collision Avoidance Robot: sims/collision-avoidance-robot/index.md
     - Robots: sims/robots/index.md
+    - Battery Drain: sims/battery-drain/index.md
   - References: references.md
   - Glossary: glossary.md
   - How We Built This Site: how-we-built-this-site.md
