--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,7 @@ nav:
   - Simulations:
     - Introduction: sims/index.md
     - Bouncing Ball: sims/bouncing-ball/index.md
+    - Circle: sims/circle/index.md
     - Gold Star: sims/gold-star/index.md
     - Polygon: sims/polygon/index.md
     - Recursion Tree: sims/recursion-tree/index.md
@@ -40,7 +41,6 @@ nav:
     - Motor: sims/motor/index.md
     - Neural Network: sims/neural-network/index.md
     - Pulse Width Modulation: sims/pwm/index.md
-    - Recursion Tree: sims/recursion-tree/index.md
     - 7 Segment Display: sims/seven-segment-display/index.md
     - Supply and Demand: sims/supply-and-demand/index.md
     - Wave Sum: sims/wave-sums/index.md
