--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,6 +51,7 @@ nav:
     - Collision Avoidance Robot: sims/collision-avoidance-robot/index.md
     - Robots: sims/robots/index.md
     - Battery Drain: sims/battery-drain/index.md
+    - AC Circuit: sims/ac-circuit/index.md
   - References: references.md
   - Glossary: glossary.md
   - How We Built This Site: how-we-built-this-site.md
