--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,7 @@ nav:
     - Robots: sims/robots/index.md
     - Battery Drain: sims/battery-drain/index.md
     - AC Circuit: sims/ac-circuit/index.md
+    - 555 Timer: sims/555-timer/index.md
   - References: references.md
   - Glossary: glossary.md
   - How We Built This Site: how-we-built-this-site.md
