--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,6 +54,8 @@ nav:
     - AC Circuit: sims/ac-circuit/index.md
     - 555 Timer: sims/555-timer/index.md
     - Breadboard: sims/breadboard/index.md
+    - Particle Fields: sims/particle-fields/index.md
+    - Resize Test: sims/resize-test/index.md
   - References: references.md
   - Glossary: glossary.md
   - How We Built This Site: how-we-built-this-site.md
