--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -56,6 +56,7 @@ nav:
     - Breadboard: sims/breadboard/index.md
     - Particle Fields: sims/particle-fields/index.md
     - Resize Test: sims/resize-test/index.md
+    - NeoPixel: sims/neopixel/index.md
   - References: references.md
   - Glossary: glossary.md
   - How We Built This Site: how-we-built-this-site.md
