--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,6 +57,7 @@ nav:
     - Particle Fields: sims/particle-fields/index.md
     - Resize Test: sims/resize-test/index.md
     - NeoPixel: sims/neopixel/index.md
+    - Bathtub: sims/bathtub/index.md
   - References: references.md
   - Glossary: glossary.md
   - How We Built This Site: how-we-built-this-site.md
