--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -58,6 +58,7 @@ nav:
     - Resize Test: sims/resize-test/index.md
     - NeoPixel: sims/neopixel/index.md
     - Bathtub: sims/bathtub/index.md
+    - Curves: sims/curve/index.md
   - References: references.md
   - Glossary: glossary.md
   - How We Built This Site: how-we-built-this-site.md
