--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,6 +59,8 @@ nav:
     - NeoPixel: sims/neopixel/index.md
     - Bathtub: sims/bathtub/index.md
     - Curves: sims/curve/index.md
+    - Color Names: sims/color-names.md
+    - Flashcards: sims/flashcards/index.md
   - References: references.md
   - Glossary: glossary.md
   - How We Built This Site: how-we-built-this-site.md
