--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ nav:
   - Home: index.md
   - About: about.md
   - Getting Started:
-    - Introduction: setup/index.md
+    - Quick Start: setup/index.md
     - Setup: setup/01-processing.md
     - System Prompt: setup/02-system-prompt.md
     - User Experience Tips: setup/07-ux-tips.md
