--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,7 @@ nav:
     - Structure: setup/04-structure.md
     - YAML File: setup/05-yaml-file.md
     - P5 Reference Manual: setup/p5-reference-manual.md
+    - Paste As Markdown: setup/08-paste-as-markdown.md
   - Simulations:
     - Introduction: sims/index.md
     - Bouncing Ball: sims/bouncing-ball/index.md
