--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ nav:
     - YAML File: setup/05-yaml-file.md
     - P5 Reference Manual: setup/p5-reference-manual.md
     - Paste As Markdown: setup/08-paste-as-markdown.md
+    - Link Previews: setup/06-link-previews.md
   - Simulations:
     - Introduction: sims/index.md
     - Bouncing Ball: sims/bouncing-ball/index.md
@@ -62,6 +63,7 @@ nav:
     - Curves: sims/curve/index.md
     - Color Names: sims/color-names.md
     - Flashcards: sims/flashcards/index.md
+    - Analog Circuits: sims/analog-circuit/index.md
   - References: references.md
   - Glossary: glossary.md
   - How We Built This Site: how-we-built-this-site.md
