--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,6 +4,7 @@ site_author: 'Dan McCreary'
 repo_name: 'GitHub Repo'
 site_url: 'https://dmccreary.github.io/microsims'
 repo_url: 'https://github.com/dmccreary/microsims'
+edit_uri: edit/master/docs/
 
 nav:
   - Home: index.md
@@ -71,7 +72,6 @@ nav:
   - Contact: contact.md
 
 # Dan's MicroSite Standards from here down
-edit_uri: 'blob/master/docs'
 theme:
   name: material
   logo: img/logo.png
@@ -87,6 +87,7 @@ theme:
     - navigation.top
     # this adds the prev and next icons in the footer
     - navigation.footer
+    - content.action.edit
 plugins:
   - search
   - social
