--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,7 +36,6 @@ nav:
     - ALU: sims/alu/index.md
     - Analog Clock: sims/analog-clock/index.md
     - Brownian Motion: sims/bouncing-ball/brownian-motion.md
-    - Circle: sims/circle/circle.md
     - Conway's Game of Life: sims/conway/index.md
     - Least Squares: sims/least-squares/index.md
     - Binary Number: sims/binary-number/index.md
@@ -65,6 +64,7 @@ nav:
     - Color Names: sims/color-names.md
     - Flashcards: sims/flashcards/index.md
     - Analog Circuits: sims/analog-circuit/index.md
+  - Submission Guidelines: submission-guidelines.md
   - References: references.md
   - Glossary: glossary.md
   - How We Built This Site: how-we-built-this-site.md
