--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,6 +64,7 @@ nav:
     - Color Names: sims/color-names.md
     - Flashcards: sims/flashcards/index.md
     - Analog Circuits: sims/analog-circuit/index.md
+    - Prisoners Dilemma: sims/prisoners-dilemma.md
   - Submission Guidelines: submission-guidelines.md
   - References: references.md
   - Glossary: glossary.md
