--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,7 +64,9 @@ nav:
     - Color Names: sims/color-names.md
     - Flashcards: sims/flashcards/index.md
     - Analog Circuits: sims/analog-circuit/index.md
-    - Prisoners Dilemma: sims/prisoners-dilemma.md
+    - Animated Wire: sims/animated-wire/index.md
+    - Background Grid: sims/background-grid/index.md
+
   - Submission Guidelines: submission-guidelines.md
   - References: references.md
   - Glossary: glossary.md
