--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -66,6 +66,19 @@ nav:
     - Analog Circuits: sims/analog-circuit/index.md
     - Animated Wire: sims/animated-wire/index.md
     - Background Grid: sims/background-grid/index.md
+    - sims/battery-life/index.md
+    - sims/bouncing-ball/01-bounce.md
+    - sims/circuits/circuits-v2.md
+    - sims/color-names/index.md
+    - sims/data-element-mapper/index.md
+    - sims/fourier/index.md
+    - sims/galton-board/index.md
+    - sims/maze-gen/index.md
+    - sims/named-colors/index.md
+    - sims/prisoners-dilemma/index.md
+    - sims/slope-and-intercept/slope-and-intercept.md
+    - sims/slope-and-intercept/slope.md
+    - sims/template/index.md
 
   - Submission Guidelines: submission-guidelines.md
   - References: references.md
