--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,7 +61,7 @@ nav:
     - NeoPixel: sims/neopixel/index.md
     - Bathtub: sims/bathtub/index.md
     - Curves: sims/curve/index.md
-    - Color Names: sims/color-names.md
+    - Color Names: sims/color-names/index.md
     - Flashcards: sims/flashcards/index.md
     - Analog Circuits: sims/analog-circuit/index.md
     - Animated Wire: sims/animated-wire/index.md
@@ -74,11 +74,9 @@ nav:
     - sims/fourier/index.md
     - sims/galton-board/index.md
     - sims/maze-gen/index.md
-    - sims/named-colors/index.md
-    - sims/prisoners-dilemma/index.md
-    - sims/slope-and-intercept/slope-and-intercept.md
-    - sims/slope-and-intercept/slope.md
-    - sims/template/index.md
+    - sims/slope-and-intercept/index.md
+    - Template: sims/template/index.md
+    - Sine and Cosine: sims/sine-and-cosine.md
 
   - Submission Guidelines: submission-guidelines.md
   - References: references.md
