--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,12 +61,12 @@ nav:
     - NeoPixel: sims/neopixel/index.md
     - Bathtub: sims/bathtub/index.md
     - Curves: sims/curve/index.md
-    - Color Names: sims/color-names/index.md
+    - Named Colors: sims/named-colors/index.md
     - Flashcards: sims/flashcards/index.md
     - Analog Circuits: sims/analog-circuit/index.md
     - Animated Wire: sims/animated-wire/index.md
     - Background Grid: sims/background-grid/index.md
-    - sims/battery-life/index.md
+    - Battery Life: sims/battery-life/index.md
     - sims/bouncing-ball/01-bounce.md
     - sims/circuits/circuits-v2.md
     - sims/color-names/index.md
@@ -75,8 +75,10 @@ nav:
     - sims/galton-board/index.md
     - sims/maze-gen/index.md
     - sims/slope-and-intercept/index.md
+    - sims/prisoners-dilemma/index.md
+    - sims/lissajous-figures/index.md
     - Template: sims/template/index.md
-    - Sine and Cosine: sims/sine-and-cosine.md
+    - Sine and Cosine: sims/sine-and-cosine/index.md
 
   - Submission Guidelines: submission-guidelines.md
   - References: references.md
