--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -107,6 +107,9 @@ theme:
 plugins:
   - search
   - social
+extra_javascript:
+  - javascripts/mathjax.js
+  - https://unpkg.com/mathjax@3/es5/tex-mml-chtml.js
 markdown_extensions:
   - admonition
   - pymdownx.details
