--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -79,6 +79,7 @@ nav:
     - sims/lissajous-figures/index.md
     - Template: sims/template/index.md
     - Sine and Cosine: sims/sine-and-cosine/index.md
+    - sims/rotating-gears/index.md
 
   - Submission Guidelines: submission-guidelines.md
   - References: references.md
