--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -80,7 +80,7 @@ nav:
     - Template: sims/template/index.md
     - Sine and Cosine: sims/sine-and-cosine/index.md
     - sims/rotating-gears/index.md
-
+    - sims/larson-scanner/index.md
   - Submission Guidelines: submission-guidelines.md
   - References: references.md
   - Glossary: glossary.md
