--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -117,6 +117,8 @@ markdown_extensions:
   - pymdownx.superfences
   - attr_list
   - md_in_html
+  - pymdownx.arithmatex:
+      generic: true
   - pymdownx.highlight:
       linenums: true
 extra:
