--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -121,6 +121,8 @@ markdown_extensions:
       generic: true
   - pymdownx.highlight:
       linenums: true
+extra_css:
+   - css/extra.css
 extra:
   analytics:
     provider: google
