--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,7 @@ nav:
     - Quick Start: setup/index.md
     - Setup: setup/01-processing.md
     - System Prompt: setup/02-system-prompt.md
+    - Template: setup/template/index.md
     - User Experience Tips: setup/07-ux-tips.md
     - Sound test: setup/03-sound-test.md
     - Structure: setup/04-structure.md
