--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -82,6 +82,7 @@ nav:
     - Sine and Cosine: sims/sine-and-cosine/index.md
     - sims/rotating-gears/index.md
     - sims/larson-scanner/index.md
+    - sims/concept-graph/index.md
   - Submission Guidelines: submission-guidelines.md
   - References: references.md
   - Glossary: glossary.md
