--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -83,6 +83,8 @@ nav:
     - sims/rotating-gears/index.md
     - sims/larson-scanner/index.md
     - sims/concept-graph/index.md
+    - sims/pendulum/index.md
+
     - Resize in iframe: sims/resize-in-iframe/index.md
   - Submission Guidelines: submission-guidelines.md
   - References: references.md
