--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -84,8 +84,8 @@ nav:
     - sims/larson-scanner/index.md
     - sims/concept-graph/index.md
     - sims/pendulum/index.md
-
     - Resize in iframe: sims/resize-in-iframe/index.md
+    - Ball in Rotating Hexagon: sims/ball-in-rotating-hexagon/index.md
   - Submission Guidelines: submission-guidelines.md
   - References: references.md
   - Glossary: glossary.md
