--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -86,6 +86,7 @@ nav:
     - sims/pendulum/index.md
     - Resize in iframe: sims/resize-in-iframe/index.md
     - Ball in Rotating Hexagon: sims/ball-in-rotating-hexagon/index.md
+    - Maze Solver: sims/maze-solver/index.md
   - Submission Guidelines: submission-guidelines.md
   - References: references.md
   - Glossary: glossary.md
