--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,7 +21,7 @@ nav:
     - P5 Reference Manual: setup/p5-reference-manual.md
     - Paste As Markdown: setup/08-paste-as-markdown.md
     - Link Previews: setup/06-link-previews.md
-  - Simulations:
+  - MicroSims:
     - Introduction: sims/index.md
     - Bouncing Ball: sims/bouncing-ball/index.md
     - Circle: sims/circle/index.md
