--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ nav:
     - Link Previews: setup/06-link-previews.md
   - MicroSims:
     - Introduction: sims/index.md
+    - Learning Graph: sims/learning-graph/index.md
     - Bouncing Ball: sims/bouncing-ball/index.md
     - Circle: sims/circle/index.md
     - Gold Star: sims/gold-star/index.md
@@ -82,7 +83,6 @@ nav:
     - Sine and Cosine: sims/sine-and-cosine/index.md
     - sims/rotating-gears/index.md
     - sims/larson-scanner/index.md
-    - sims/concept-graph/index.md
     - sims/pendulum/index.md
     - Resize in iframe: sims/resize-in-iframe/index.md
     - Ball in Rotating Hexagon: sims/ball-in-rotating-hexagon/index.md
