--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ nav:
     - Introduction: sims/index.md
     - Learning Graph: sims/learning-graph/index.md
     - Bouncing Ball: sims/bouncing-ball/index.md
+    - Responsive Design: sims/responsive-design/index.md
     - Circle: sims/circle/index.md
     - Gold Star: sims/gold-star/index.md
     - Polygon: sims/polygon/index.md
