--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -88,6 +88,7 @@ nav:
     - Resize in iframe: sims/resize-in-iframe/index.md
     - Ball in Rotating Hexagon: sims/ball-in-rotating-hexagon/index.md
     - Maze Solver: sims/maze-solver/index.md
+    - Mobile Buttons: sims/mobile-buttons/index.md
   - Submission Guidelines: submission-guidelines.md
   - References: references.md
   - Glossary: glossary.md
