--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Micro Simulations for Education
-site_description: 'Resources for teaching classes on Micro Simulators using generative AI and ChatGPT.'
+site_description: 'Resources for teaching classes on MicroSims using generative AI p5.js.'
 site_author: 'Dan McCreary'
 repo_name: 'GitHub Repo'
 site_url: 'https://dmccreary.github.io/microsims'
