--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,6 +32,7 @@ nav:
     - Circle: sims/circle/index.md
     - Gold Star: sims/gold-star/index.md
     - Polygon: sims/polygon/index.md
+    - Fractal Tree: sims/fractal-tree/index.md
     - Recursion Tree: sims/recursion-tree/index.md
     - Sine Wave: sims/sine-wave/index.md
     - Canon: sims/canon/index.md
