--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,8 +32,9 @@ nav:
     - Circle: sims/circle/index.md
     - Gold Star: sims/gold-star/index.md
     - Polygon: sims/polygon/index.md
-    - Fractal Tree: sims/fractal-tree/index.md
+    - Simple Tree: sims/simple-tree/index.md
     - Recursion Tree: sims/recursion-tree/index.md
+    - Fractal Tree: sims/fractal-tree/index.md
     - Sine Wave: sims/sine-wave/index.md
     - Canon: sims/canon/index.md
     - String Harmonics: sims/string-harmonics/index.md
