--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,6 +35,7 @@ nav:
     - Simple Tree: sims/simple-tree/index.md
     - Recursion Tree: sims/recursion-tree/index.md
     - Fractal Tree: sims/fractal-tree/index.md
+    - Lady Bug Walk: sims/lady-bug-walk/index.md
     - Sine Wave: sims/sine-wave/index.md
     - Canon: sims/canon/index.md
     - String Harmonics: sims/string-harmonics/index.md
