--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,6 +44,7 @@ nav:
     - Rabbits and Foxes: sims/rabbits-and-foxes/index.md
     - ALU: sims/alu/index.md
     - Analog Clock: sims/analog-clock/index.md
+    - Fibonacci Clock: sims/fibonacci-clock/index.md
     - Brownian Motion: sims/bouncing-ball/brownian-motion.md
     - Conway's Game of Life: sims/conway/index.md
     - Least Squares: sims/least-squares/index.md
