--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,9 @@ nav:
   - Prompts:
     - Introduction: prompts/index.md
     - Basic Prompts: prompts/basic-prompts.md
+  - Rules:
+    - Introduction: rules/index.md
+    - Standard MicroSim Rules: rules/standard-rules.md
   - MicroSims:
     - Introduction: sims/index.md
     - Learning Graph: sims/learning-graph/index.md
