--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,6 +27,7 @@ nav:
   - Rules:
     - Introduction: rules/index.md
     - Standard MicroSim Rules: rules/standard-rules.md
+    - Cursor Rule Loading: rules/cursor.md
   - MicroSims:
     - Introduction: sims/index.md
     - Learning Graph: sims/learning-graph/index.md
