--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,6 +100,7 @@ nav:
     - Ball in Rotating Hexagon: sims/ball-in-rotating-hexagon/index.md
     - Maze Solver: sims/maze-solver/index.md
     - Mobile Buttons: sims/mobile-buttons/index.md
+    - Bee: sims/bee/index.md
   - Submission Guidelines: submission-guidelines.md
   - References: references.md
   - Glossary: glossary.md
