--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,6 +9,7 @@ edit_uri: edit/master/docs/
 nav:
   - Home: index.md
   - About: about.md
+  - Why Simulations for Education: why-sims-for-education.md
   - Getting Started:
     - Quick Start: setup/index.md
     - Setup: setup/01-processing.md
@@ -30,7 +31,15 @@ nav:
     - Cursor Rule Loading: rules/cursor.md
   - MicroSims:
     - Introduction: sims/index.md
-    - Learning Graph: sims/learning-graph/index.md
+    - Gallery: sims/gallery.md
+    - Learning Graph: 
+      - Intro: sims/learning-graph/index.md
+      - sims/brownian-motion/index.md
+      - sims/learning-graph-v1/index.md
+      - sims/learning-graph-v1/01-course-description.md
+      - sims/learning-graph-v1/02-concept-enumeration.md
+      - sims/learning-graph-v1/03-concept-dependency.md
+      - sims/learning-graph-v1/04-taxonomy.md
     - Bouncing Ball: sims/bouncing-ball/index.md
     - Responsive Design: sims/responsive-design/index.md
     - Circle: sims/circle/index.md
@@ -101,6 +110,8 @@ nav:
     - Maze Solver: sims/maze-solver/index.md
     - Mobile Buttons: sims/mobile-buttons/index.md
     - Bee: sims/bee/index.md
+    - Snake: sims/snake/index.md
+    - Solar Battery: sims/solar-battery/index.md
   - Submission Guidelines: submission-guidelines.md
   - References: references.md
   - Glossary: glossary.md
