--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -116,6 +116,7 @@ nav:
     - Bee: sims/bee/index.md
     - Snake: sims/snake/index.md
     - Solar Battery: sims/solar-battery/index.md
+    - Ying Yang: sims/yang-yin/index.md
   - Submission Guidelines: submission-guidelines.md
   - References: references.md
   - Glossary: glossary.md
