--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,10 @@ nav:
     - Motivation: why/motivation.md
     - Impact Analysis: why/impact-analysis.md
     - Deep Research: why/deep-research-final.md
+  - Formal Education Concepts:
+    
+    - Defintion: concepts/what-is-a-microsim.md
+    - 
   - Getting Started:
     - Quick Start: setup/index.md
     - Setup: setup/01-processing.md
