--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,9 +15,9 @@ nav:
     - Impact Analysis: why/impact-analysis.md
     - Deep Research: why/deep-research-final.md
   - Formal Education Concepts:
-    
-    - Defintion: concepts/what-is-a-microsim.md
-    - 
+    - Introduction: concepts/index.md
+    - Definition: concepts/what-is-a-microsim.md
+    - References: concepts/references.md
   - Getting Started:
     - Quick Start: setup/index.md
     - Setup: setup/01-processing.md
