--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,10 +14,10 @@ nav:
     - Motivation: why/motivation.md
     - Impact Analysis: why/impact-analysis.md
     - Deep Research: why/deep-research-final.md
-  - Formal Education Concepts:
-    - Introduction: concepts/index.md
-    - Definition: concepts/what-is-a-microsim.md
-    - References: concepts/references.md
+  - Formal Education Theory Chapters:
+    - Introduction: chapters/index.md
+    - Definition: chapters/what-is-a-microsim.md
+    - References: chapters/references.md
   - Getting Started:
     - Quick Start: setup/index.md
     - Setup: setup/01-processing.md
