--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,6 +17,7 @@ nav:
   - Formal Education Theory Chapters:
     - Introduction: chapters/index.md
     - Definition: chapters/what-is-a-microsim.md
+    - MicroSims in the Educational Technology Landscape: chapters/microsims-in-the-ed-tech-landscape.md
     - References: chapters/references.md
   - Getting Started:
     - Quick Start: setup/index.md
