--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,6 +18,7 @@ nav:
     - Introduction: chapters/index.md
     - Definition: chapters/what-is-a-microsim.md
     - MicroSims in the Educational Technology Landscape: chapters/microsims-in-the-ed-tech-landscape.md
+    - MicroSim Design: chapters/microsim-design.md
     - References: chapters/references.md
   - Getting Started:
     - Quick Start: setup/index.md
