--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,12 +14,17 @@ nav:
     - Motivation: why/motivation.md
     - Impact Analysis: why/impact-analysis.md
     - Deep Research: why/deep-research-final.md
+  
   - Formal Education Theory Chapters:
     - Introduction: chapters/index.md
     - Definition: chapters/what-is-a-microsim.md
-    - MicroSims in the Educational Technology Landscape: chapters/microsims-in-the-ed-tech-landscape.md
+    - MicroSims in the Ed Tech Landscape: chapters/microsims-in-the-ed-tech-landscape.md
+    - Sample MicroSims: chapters/sample-microsims.md
     - MicroSim Design: chapters/microsim-design.md
+    - MicroSim Metadata: chapters/describing-a-microsim.md
+    - Paper Steps: chapters/paper-steps.md
     - References: chapters/references.md
+  
   - Getting Started:
     - Quick Start: setup/index.md
     - Setup: setup/01-processing.md
