--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,6 +44,7 @@ nav:
     - Introduction: rules/index.md
     - Standard MicroSim Rules: rules/standard-rules.md
     - Cursor Rule Loading: rules/cursor.md
+  
   - MicroSims:
     - Introduction: sims/index.md
     - Gallery: sims/gallery.md
@@ -73,6 +74,7 @@ nav:
     - ALU: sims/alu/index.md
     - Analog Clock: sims/analog-clock/index.md
     - Fibonacci Clock: sims/fibonacci-clock/index.md
+    - Microphone Frequency Spectrum: sims/fft-mic/index.md
     - Brownian Motion: sims/bouncing-ball/brownian-motion.md
     - Conway's Game of Life: sims/conway/index.md
     - Least Squares: sims/least-squares/index.md
