--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -50,14 +50,14 @@ nav:
     - Gallery: sims/gallery.md
     - Learning Graph: 
       - Intro: sims/learning-graph/index.md
-      - sims/brownian-motion/index.md
       - sims/learning-graph-v1/index.md
       - sims/learning-graph-v1/01-course-description.md
       - sims/learning-graph-v1/02-concept-enumeration.md
       - sims/learning-graph-v1/03-concept-dependency.md
       - sims/learning-graph-v1/04-taxonomy.md
     - Bouncing Ball: sims/bouncing-ball/index.md
-    - Responsive Design: sims/responsive-design/index.md
+    - Bouncing Ball v2: sims/bouncing-ball/01-bounce.md
+    - Brownian Motion: sims/brownian-motion/index.md
     - Circle: sims/circle/index.md
     - Gold Star: sims/gold-star/index.md
     - Polygon: sims/polygon/index.md
@@ -105,9 +105,9 @@ nav:
     - Flashcards: sims/flashcards/index.md
     - Analog Circuits: sims/analog-circuit/index.md
     - Animated Wire: sims/animated-wire/index.md
+    - Responsive Design: sims/responsive-design/index.md
     - Background Grid: sims/background-grid/index.md
     - Battery Life: sims/battery-life/index.md
-    - sims/bouncing-ball/01-bounce.md
     - sims/circuits/circuits-v2.md
     - sims/color-names/index.md
     - sims/data-element-mapper/index.md
