--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -67,6 +67,7 @@ nav:
     - Lady Bug Walk: sims/lady-bug-walk/index.md
     - Sine Wave: sims/sine-wave/index.md
     - Canon: sims/canon/index.md
+    - BFS vs DFS: sims/bfs-vs-dfs/index.md
     - String Harmonics: sims/string-harmonics/index.md
     - Circuits: sims/circuits/index.md
     - H-Bridge: sims/h-bridge/index.md
