--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
     - Sample MicroSims: chapters/sample-microsims.md
     - MicroSim Design: chapters/microsim-design.md
     - MicroSim Metadata: chapters/describing-a-microsim.md
+    - Advanced Topics: chapters/advanced-topics.md
     - Paper Steps: chapters/paper-steps.md
     - References: chapters/references.md
   
