--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -76,6 +76,7 @@ nav:
     - ALU: sims/alu/index.md
     - Analog Clock: sims/analog-clock/index.md
     - Fibonacci Clock: sims/fibonacci-clock/index.md
+    - Flower Petal Designer: sims/flower-petal/index.md
     - Microphone Frequency Spectrum: sims/fft-mic/index.md
     - Brownian Motion: sims/bouncing-ball/brownian-motion.md
     - Conway's Game of Life: sims/conway/index.md
